# addrex

./: .dockerignore  .gitignore  Dockerfile  QWEN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
specs/001-phonebook-api-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-phonebook-api-service/checklists/: requirements.md
specs/001-phonebook-api-service/contracts/: openapi.yaml
specs/002-tdd-task-management/: spec.md
specs/002-tdd-task-management/checklists/: requirements.md
src/: main.py
src/api/: dependencies.py
src/api/v1/: __init__.py
src/api/v1/routes/: get_address.py  (+3 more)
src/config/: settings.py
src/models/: address.py  api_models.py  phone.py  phone_address.py
src/services/: phonebook_service.py
src/utils/: validators.py
tests/contract/api_contracts/: test_contract_create_address.py  test_contract_delete_address.py  test_contract_get_address.py  test_contract_update_address.py  test_create_address.py  test_delete_address.py  test_get_address.py  test_update_address.py
tests/integration/api/: test_create_address.py  test_delete_address.py  test_get_address.py  test_integration_create_address.py  test_integration_delete_address.py  test_integration_get_address.py  test_integration_update_address.py  test_update_address.py
tests/performance/: concurrency_test.py  response_time_test.py
tests/unit/api/: test_dependencies.py
tests/unit/config/: test_settings.py
tests/unit/models/: test_address.py  test_phone.py  test_phone_address.py
(+8 files in other folders)
