[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonebook_api"
version = "1.0.0"
description = "API service for storing and managing phone-to-address mappings"
authors = [{ name = "Developer", email = "dev@example.com" }]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uv>=0.1.0",
    "redis>=4.5.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "isort>=5.0",
    "xdist>=0.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--cov=src", "--cov-report=html"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # complexity
    "B", # bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"